2020-08-11  Charlie Zender  <zender@uci.edu>

	* ncra reset wgt_sum after each ssc during MRO to fix per-record weighting

	* NCO 4.9.4-alpha12 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha12: Dry Rot';git push
	git tag -a 4.9.4-alpha12 -m 'autoconf gpu token; nco_rgr_wgt() gpu directives;';git push --tags

	* Do not nest SIMD within existing SIMD region

	* Hand-merge Sahil's GPU directives and autoconf token, add SIMD branch

2020-08-10  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.4-alpha11 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha11: Homemade Sushi';git push
	git tag -a 4.9.4-alpha11 -m 'autoconf link to alpha10 not alpha01 error; ncclimo hfc mpi fl_nbr=1; ncra --per_record_weights;';git push --tags

	* autoconf link to alpha10 not alpha01

	* ncra investigate per-record weighting anomalies spotted by PJCS

2020-08-09  Charlie Zender  <zender@uci.edu>

	* ncra --per_record_weights applies command-line numeric weights to records

	* nco_rgr_wgt() clarify HINT when spatial dimension hard to find

2020-08-07  Charlie Zender  <zender@uci.edu>

	* ncclimo add mpi mode to hfc for fl_nbr == 1

	* Deprecate unreleased splitter code for sub-averages and (time,tpd,space) shapes

	* nco_rgr_wgt() add 5.0e-15 tolerance to area checks, check only 2D grids

2020-08-06  Charlie Zender  <zender@uci.edu>

	* ncclimo tpd_out inferral valid for any time-coordinate named "time" (EAM and ELM, not yet MPAS)

	* NCO 4.9.4-alpha10 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha10: Splashdown';git push
	git tag -a 4.9.4-alpha10 -m 'autoconf enable-gpu, enable-optimize; ncks dt_fmt json/xml; ncclimo ia mlt fl hfc, sdd dfl, nfr tpd, no_amwg;';git push --tags

	* ncclimo remove extraneous 's' (typo/command) from MPI section

	* ncclimo infer tdp_out from first file if not user-specified with hfc or hfs

2020-08-05  Charlie Zender  <zender@uci.edu>

	* ncclimo fix yyyy_clm_end string in December for scd, sdd modes
